# se-toolkit-hackathon

./: .dockerignore  .env.docker.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
backend/backend/: database.py
backend/src/ai_planner/: __init__.py  agent.py  database.py  main.py  models.py  run.py  settings.py
backend/src/ai_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/ai_planner/routers/: tasks.py
frontend/: Dockerfile  app.py
frontend/ssl/: generate-cert.sh
