[project]
name = "ai-planner"
version = "0.1.0"
description = "AI Smart Planner Backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "openai>=1.12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "sqlmodel>=0.0.16",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_planner*"]
